--- a/admin/.env
+++ b/admin/.env
@@ -1,1 +1,4 @@
 VITE_API_URL=https://portfolio-qtru.onrender.com
+# VITE_API_URL=http://localhost:8080
+CLOUDINARY_API_KEY=395913761275942
+CLOUDINARY_API_SECRET=cyQpAiKhUZqqXfpThVZ0yyulATs
